# SearchEngine

./: .gitignore  CMakeLists.txt  Readme.md
include/: invertedIndex.h  json_converter.h  searchServer.h  testFiles.h
src/: CMakeLists.txt  invertedIndex.cpp  jsonConverter.cpp  json_converter.cpp  main.cpp  searchServer.cpp  testFiles.cpp
test/: CMakeLists.txt  invertedIndex_test.cpp  searchServer_test.cpp
testFiles/: requests.json
test_files/: config.json
